--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ dpkg (1.14.10) UNRELEASED; urgency=low
   * Add more debug messages to dpkg-shlibdeps to ease collecting information
     in case of problems.
   * dpkg-shlibdeps now accepts again empty dependencies in shlibs files.
+  * dpkg-shlibdeps will try harder to identify packages providing a library
+    by looking up dpkg -S on the realpath of any symlink to a library.
+    Closes: #452339
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
