dpkg-source: fix regex used to identify extension of .orig tarball
Regex special meta-characters (mainly like "+" in versions) embedded in $basename
made the regex fail which resulted in unwanted upgrade of source packages to
Format: 2.0.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
 	at the beginning of the list of path to search, even if they
 	are already listed (one might want to use LD_LIBRARY_PATH to
 	change the search order).
+	* scripts/dpkg-source.pl: Fix regex used to identify the extension
+	of the orig.tar.{gz,bz2,lzma} file.
 
 2007-11-21  Raphael Hertzog  <hertzog@debian.org>
 
