--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-23  Guillem Jover  <guillem@debian.org>
+
+	* scripts/Dpkg/Fields.pm (%fieldimps): Declare with 'my' instead
+	of 'our'.
+
 2007-11-22  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-name.sh (getname): Get the package extension from the
