dpkg-gensymbols: Remove duplicated declaration of @librarypaths

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-23  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-gensymbols.pl (@librarypaths): Remove duplicated
+	declaration.
+
+2007-11-23  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/Fields.pm (%fieldimps): Declare with 'my' instead
 	of 'our'.
 
