dpkg-architecture: use a hash instead of independent variables
Reduce the code by using a hash to store the build and host architecture
values, and the values of @ordered as keys.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2007-11-23  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-architecture.pl (%env): Rename to ...
+	(%v): ... this.
+	($deb_build_arch, $deb_build_arch_os, $deb_build_arch_cpu)
+	($deb_build_gnu_cpu, deb_build_gnu_system, deb_build_gnu_type)
+	($deb_host_arch, $deb_host_arch_os, $deb_host_arch_cpu)
+	($deb_host_gnu_cpu, $deb_host_gnu_system, $deb_host_gnu_type): Use
+	the %v hash to store those variables using the values from @ordered
+	as keys.
+	($abi): New variable.
+
+2007-11-23  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-gensymbols.pl (@librarypaths): Remove duplicated
 	declaration.
 
