--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-23  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.10.
+
+2007-11-23  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/Arch.pm (get_build_arch): Rename to ...
 	(get_raw_build_arch): ... this.
 	(get_build_arch): New function.
