--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.10) UNRELEASED; urgency=low
+dpkg (1.14.10) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * dpkg-shlibdeps now correctly identify private libraries (avoid many
@@ -26,7 +26,7 @@ dpkg (1.14.10) UNRELEASED; urgency=low
   [ Added scripts translations ]
   * Swedish (Peter Karlsson)
 
- -- Guillem Jover <guillem@debian.org>  Tue, 20 Nov 2007 07:27:44 +0200
+ -- Guillem Jover <guillem@debian.org>  Fri, 23 Nov 2007 06:32:27 +0200
 
 dpkg (1.14.9) unstable; urgency=low
 
