--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.11) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Fri, 23 Nov 2007 06:50:02 +0200
+
 dpkg (1.14.10) unstable; urgency=low
 
   [ Raphael Hertzog ]
