dpkg-shlibdeps: optimize "dpkg -S" lookups by caching results

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-23  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/dpkg-shlibdeps.pl: Apply patch from Aaron M. Ucko
+	<ucko@debian.org> to optimize "dpkg -S" lookups by caching
+	results.
+
+2007-11-23  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/dpkg-shlibdeps.pl: Limit the number of warnings
 	displayed about symbols not found in libraries to 10 per binary.
 
