--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,6 @@
-2007-11-23  Raphael Hertzog  <hertzog@debian.org>
+2007-11-23  Aaron M. Ucko  <ucko@debian.org>
 
-	* scripts/dpkg-shlibdeps.pl: Apply patch from Aaron M. Ucko
-	<ucko@debian.org> to optimize "dpkg -S" lookups by caching
+	* scripts/dpkg-shlibdeps.pl: Optimize "dpkg -S" lookups by caching
 	results.
 
 2007-11-23  Raphael Hertzog  <hertzog@debian.org>
