dpkg-scanpackages: Do not require controllib.pl anymore

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-24  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-scanpackages.pl: Do not require controllib.pl anymore.
+
 2007-11-23  Aaron M. Ucko  <ucko@debian.org>
 
 	* scripts/dpkg-shlibdeps.pl: Optimize "dpkg -S" lookups by caching
