dpkg-scanpackages: Properly support an optional override file

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-24  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-scanpackages.pl: Use parenthesis to force the
+	precedence when checking if the specified override file exists.
+
+2007-11-24  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-scanpackages.pl: Do not require controllib.pl anymore.
 
 2007-11-23  Aaron M. Ucko  <ucko@debian.org>
