--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,10 @@ dpkg (1.14.11) UNRELEASED; urgency=low
   * dpkg-shlibdeps: optimize "dpkg -S" lookups by caching results, patch
     from Aaron M. Ucko <ucko@debian.org>. Closes: #452577
 
+  [ Guillem Jover ]
+  * Fix dpkg-scanpackages to properly support an optional override file.
+    Closes: #452621
+
  -- Guillem Jover <guillem@debian.org>  Fri, 23 Nov 2007 06:50:02 +0200
 
 dpkg (1.14.10) unstable; urgency=low
