Dpkg::Arch: Do not shadow $gcc_host_gnu_type inside get_raw_host_arch

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-24  Guillem Jover  <guillem@debian.org>
 
+	* scripts/Dpkg/Arch.pm (get_raw_host_arch): Do not shadow
+	$gcc_host_gnu_type with a local variable.
+
+2007-11-24  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-scanpackages.pl: Use parenthesis to force the
 	precedence when checking if the specified override file exists.
 
