Declare more variables in perl scripts with 'my' instead of 'our'

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-24  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-scanpackages.pl (%vercache): Declare with 'my' instead
+	of 'our'.
+	* scripts/dpkg-shlibdeps.pl ($host_arch): Likewise.
+
+2007-11-24  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/Arch.pm (get_raw_host_arch): Do not shadow
 	$gcc_host_gnu_type with a local variable.
 
