--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-24  Guillem Jover  <guillem@debian.org>
 
+	* scripts/Makefile.am (clean-local): Run chmod only if t.tmp exists.
+
+2007-11-24  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-scanpackages.pl (%vercache): Declare with 'my' instead
 	of 'our'.
 	* scripts/dpkg-shlibdeps.pl ($host_arch): Likewise.
