--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.11) UNRELEASED; urgency=low
+dpkg (1.14.11) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * dpkg-shlibdeps now ignores the lack of dependency information in some
@@ -14,7 +14,7 @@ dpkg (1.14.11) UNRELEASED; urgency=low
   * Fix dpkg-scanpackages to properly support an optional override file.
     Closes: #452621
 
- -- Guillem Jover <guillem@debian.org>  Fri, 23 Nov 2007 06:50:02 +0200
+ -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:19:02 +0200
 
 dpkg (1.14.10) unstable; urgency=low
 
