--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.12) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
+
 dpkg (1.14.11) unstable; urgency=low
 
   [ Raphael Hertzog ]
