--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-24  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-gensymbols.pl: Add a new -I<file> option to force
+	the usage of a specific file as basis for the generated symbols
+	file.
+
 2007-11-24  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.12~.
