--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ dpkg (1.14.12) UNRELEASED; urgency=low
   * Dpkg::Shlibs::find_library() now returns canonicalized paths.
   * dpkg-shlibdeps always tries the realpath() of a lib as fallback when
     trying to identify the package of a lib (and not only for symlinks).
+  * dpkg-shlibdeps doesn't fail any more if it can't find unversioned
+    libraries on the presumption that they are just private libraries. Outputs
+    a warning instead.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
 
