--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.12) UNRELEASED; urgency=low
 
-  *
+  [ Raphael Hertzog ]
+  * Dpkg::Shlibs::find_library() now returns canonicalized paths.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
 
