--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.14.12) UNRELEASED; urgency=low
   * Add -I<file> option to dpkg-gensymbols to force the usage of a specific
     symbols file.
   * Dpkg::Shlibs::find_library() now returns canonicalized paths.
+  * dpkg-shlibdeps always tries the realpath() of a lib as fallback when
+    trying to identify the package of a lib (and not only for symlinks).
 
  -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
 
