dpkg-shlibdeps(1): expand manual page with explanations concerning failures
* scripts/dpkg-shlibdeps.pl: Harmonize a failure message.
* man/dpkg-shlibdeps.1: Provide explanations concerning the two
failures that dpkg-shlibdeps might generate. This is needed so
that maintainers have an idea of what to do to fix the problems.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-11-28  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/dpkg-shlibdeps.pl: Harmonize a failure message.
+	* man/dpkg-shlibdeps.1: Provide explanations concerning the two
+	failures that dpkg-shlibdeps might generate. This is needed so
+	that maintainers have an idea of what to do to fix the problems.
+
+2007-11-28  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/dpkg-shlibdeps.pl: Do not fail if it
 	can't find unversioned libraries, just output a warning.
 	Consequently skip the check on symbols when some libs were not
