dpkg-gensymbols: override the check level with an environment variable
* scripts/dpkg-gensymbols.pl: The environment variable
DPKG_GENSYMBOLS_CHECK_LEVEL can override the level of checks made by
dpkg-gensymbols. This offers the possibility to unofficial ports to ignore
errors due to symbols files that do not correspond.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-11-28  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/dpkg-gensymbols.pl: The environment variable
+	DPKG_GENSYMBOLS_CHECK_LEVEL can override the level of checks made
+	by dpkg-gensymbols. This offers the possibility to unofficial
+	ports to ignore errors due to symbols files that do not correspond.
+
+2007-11-28  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/dpkg-shlibdeps.pl: Harmonize a failure message.
 	* man/dpkg-shlibdeps.1: Provide explanations concerning the two
 	failures that dpkg-shlibdeps might generate. This is needed so
