--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ dpkg (1.14.12) UNRELEASED; urgency=low
     a warning instead.
   * Expand the dpkg-shlibdeps manual page with explanations concerning
     failures.
+  * The environment variable DPKG_GENSYMBOLS_CHECK_LEVEL can be used to force
+    dpkg-gensymbols to use a precise level of checks. Closes: #452022
 
  -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
 
