Define several private functions and variables as static

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-29  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-deb/build.c (arbitrary_fields): Define as static.
+	* lib/dbmodify.c (fnis): Likewise.
+	* lib/fields.c (conffvalue_lastword): Likewise.
+	* lib/tarfn.c (StoC): Likewise.
+	* src/packages.c (breaks_check_target): Likewise.
+	* utils/start-stop-daemon.c (siglist): Likewise.
+
 2007-11-28  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-gensymbols.pl: The environment variable
