--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ dpkg (1.14.12) UNRELEASED; urgency=low
   * The environment variable DPKG_GENSYMBOLS_CHECK_LEVEL can be used to force
     dpkg-gensymbols to use a precise level of checks. Closes: #452022
 
+  [ Guillem Jover ]
+  * Define several private functions and variables as static.
+
  -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
 
 dpkg (1.14.11) unstable; urgency=low
