--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-gencontrol.pl (spfileslistvalue): Add prototype. Move
+	to the top of the file with the other functions.
+
+2007-11-29  Guillem Jover  <guillem@debian.org>
+
 	* src/main.c (log_file): Move definition to ...
 	* lib/dpkg-db.h: ... here.
 	* src/configure.c (status_pipes): Remove extern definition.
