dpkg-scanpackages: Use Dpkg::Versions instead of dpkg --compare-versions

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-scanpackages.pl: Use Dpkg::Version.
+	(vercmp): Use compare_versions instead of 'dpkg --compare-versions'.
+
+2007-11-29  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-scanpackages.pl: Use Dpkg::ErrorHandling. Use error
 	syserr and subprocerr instead of die and sprintf.
 	(load_override): Likewise.
