Move extern declarations to header files and stop defining them as extern

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
+	* src/main.c (log_file): Move definition to ...
+	* lib/dpkg-db.h: ... here.
+	* src/configure.c (status_pipes): Remove extern definition.
+	* src/errors.c (status_pipes): Likewise.
+	* lib/tarfn.c (TarExtractor): Do not declare as extern.
+
+2007-11-29  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-deb/build.c (arbitrary_fields): Define as static.
 	* lib/dbmodify.c (fnis): Likewise.
 	* lib/fields.c (conffvalue_lastword): Likewise.
