--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.14.12) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Define several private functions and variables as static.
+  * Move extern declarations to header files and stop defining them as extern.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
 
