--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.12.
+
+2007-11-29  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-scanpackages.pl: Use Dpkg::Version.
 	(vercmp): Use compare_versions instead of 'dpkg --compare-versions'.
 
