--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.12) UNRELEASED; urgency=low
+dpkg (1.14.12) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Add -I<file> option to dpkg-gensymbols to force the usage of a specific
@@ -18,10 +18,10 @@ dpkg (1.14.12) UNRELEASED; urgency=low
   * Define several private functions and variables as static.
   * Move extern declarations to header files and stop defining them as extern.
   * Unify parsing of Section and Priority in dpkg-gencontrol with Homepage.
-  * Change dpkg-scanpackages to use the Dpkg::ErrorHandling module.
-  * Change dpkg-scanpackages to use the Dpkg::Versions module.
+  * Switch dpkg-scanpackages to use the new Dpkg::ErrorHandling and
+    Dpkg::Versions modules.
 
- -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
+ -- Guillem Jover <guillem@debian.org>  Thu, 29 Nov 2007 06:14:09 +0200
 
 dpkg (1.14.11) unstable; urgency=low
 
