--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.14.13~.
+
+2007-11-29  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.14.12.
 
 2007-11-29  Guillem Jover  <guillem@debian.org>
