--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.13) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Thu, 29 Nov 2007 07:08:35 +0200
+
 dpkg (1.14.12) unstable; urgency=low
 
   [ Raphael Hertzog ]
