parsecdata: Fix parsing of fields starting with a colon
Fix regex to determine the field name correctly if the field's value
starts with a colon.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,11 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   [ Frank Lichtenheld ]
   * Add an own manpage for Dpkg's version format. Mostly stolen
     from policy. Closes: #373003
+  * Fix control file parsing for field values starting with a colon.
+    Apparently nobody ever needed this until Vcs-Cvs came along.
+    Closes: #453364
 
- -- Guillem Jover <guillem@debian.org>  Thu, 29 Nov 2007 07:08:35 +0200
+ -- Frank Lichtenheld <djpig@debian.org>  Thu, 29 Nov 2007 23:04:33 +0100
 
 dpkg (1.14.12) unstable; urgency=low
 
