Updated Swedish translation.
Updated man page translation to 1354t.
Updated scripts translation to 480t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,12 @@ dpkg (1.14.13) UNRELEASED; urgency=low
     Apparently nobody ever needed this until Vcs-Cvs came along.
     Closes: #453364
 
+  [ Updated man pages translations ]
+  * Swedish (Peter Karlsson)
+
+  [ Updated scripts translations ]
+  * Swedish (Peter Karlsson)
+
  -- Frank Lichtenheld <djpig@debian.org>  Thu, 29 Nov 2007 23:04:33 +0100
 
 dpkg (1.14.12) unstable; urgency=low
