--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-20  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 480t.
+
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
