Don't use symlinks in usr/share/doc
Copy the usr/share/doc directory to dpkg-dev and dselect (Instead
of using symlinks). The space requirements are minimal and adding
the needed dependencies to comply with policy would be way more
inconvenient.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-12-04  Frank Lichtenheld  <djpig@debian.org>
+
+	* debian/rules: Call dh_installchangelogs
+	and dh_installdocs for all packages instead
+	of only for dpkg.
+	* debian/dpkg-dev.docs: Symlink to dpkg.docs.
+	* debian/dselect.docs: Likewise.
+	* debian/dpkg-dev.preinst: Remove
+	/usr/share/doc/dpkg-dev symlink on upgrade.
+	* debian/dselect.preinst: Likewise.
+
 2007-11-29  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/controllib.pl (parsecdata): Fix
