--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * Fix control file parsing for field values starting with a colon.
     Apparently nobody ever needed this until Vcs-Cvs came along.
     Closes: #453364
+  * Copy the usr/share/doc directory to dpkg-dev and dselect (Instead
+    of using symlinks). The space requirements are minimal and adding
+    the needed dependencies to comply with policy would be way more
+    inconvenient. Pointed out by Rene Engelhard. Closes: #452730
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
