po/sv.po: Fix a typo ')' vs '>' which lead to build errors

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-04  Frank Lichtenheld  <djpig@debian.org>
+
+	* po/sv.po: Fix a typo ')' vs '>' which lead to
+	build errors.
+
 2007-11-02  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1354t.
