--- a/man/deb-version.5
+++ b/man/deb-version.5
@@ -122,7 +122,5 @@ Copyright © 1996,1997,1998 Ian Jackson and Christian Schwarz.
 .br
 Copyright © 2007 Frank Lichtenheld
 .sp
-This manual is free software; you may redistribute it and/or modify it
-under the terms of the GNU General Public License as published by the
-Free Software Foundation; either version 2, or (at your option) any later
-version.
+This is free software; see the GNU General Public Licence version 2 or later
+for copying conditions. There is NO WARRANTY.
